--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {  
   "name": "hazaarlabs/hazaar-mvc",  
-  "description": "The MVC framework that makes PHP not suck!",  
+  "description": "The MVC framework that makes PHP not suck!", 
+  "homepage": "https://github.com/zendframework/zend-mvc",
+  "autoload": {
+    "psr-4": {
+      "Hazaar\\": "Hazaar/"
+    }
+  },
   "require": {  
-    "php": "^5.4.0 || ^7.0"  
+    "php": "^5.6 || ^7.0"  
   }  
 }
