Some polish for composer installation.

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,37 @@
-{  
-  "name": "hazaarlabs/hazaar-mvc",  
-  "description": "The MVC framework that makes PHP not suck!", 
-  "homepage": "https://git.hazaarlabs.com/hazaar/hazaar-mvc",
+{
+  "name": "hazaarlabs/hazaar-mvc",
+  "description": "The MVC framework that makes PHP not suck!",
+  "homepage": "http://hazaarmvc.com",
+  "license": "Apache-2.0",
+  "authors": [
+    {
+      "name": "Jamie Carl",
+      "email": "jamie@hazaarlabs.com",
+      "homepage": "http://www.hazaarlabs.com",
+      "role": "developer"
+    }
+  ],
+  "support": {
+    "email": "support@hazaarlabs.com",
+    "issues": "https://git.hazaarlabs.com/hazaar/hazaar-mvc/issues",
+    "wiki": "https://git.hazaarlabs.com/hazaar/hazaar-mvc/wikis/home",
+    "docs": "https://hazaarmvc.com/docs",
+    "source": "https://git.hazaarlabs.com/hazaar/hazaar-mvc/tree/master"
+  },
+  "type": "library",
+  "keywords": [
+    "php",
+    "mvc",
+    "framework",
+    "hazaar",
+    "hmvc"
+  ],
   "autoload": {
     "psr-4": {
       "Hazaar\\": "src/"
     }
   },
-  "require": {  
-    "php": "^5.6 || ^7.0"  
-  }  
+  "require": {
+    "php": "^5.6 || ^7.0"
+  }
 }
