--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-tests/application/.runtime
 .vs
+.buildpath
+.DS_Store
+.idea
+.project
+.settings/
+.*.sw*
+.*.un~
+Properties
+build/
+nbproject
+tmp/
+vendor/
+composer.lock
