Fixed up unit tests and CI config
We now use composer to install phpunit and do the testing.  Unit tests have been updated to work in this new way.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 Test:
   script:
   - git submodule update --init
-  - phpunit --bootstrap tests/bootstrap.php tests
+  - composer update --dev
+  - vender/bin/phpunit
   stage: test
