--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,13 @@
   },
   "require": {
     "php": "^5.6 || ^7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.14"
+  },
+  "autoload-dev": {
+    "psr-0": {
+      "HazaarTest\\": "tests/"
+    }
   }
 }
