--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 Test:
   script:
   - git submodule update --init
-  - composer update --dev
-  - vender/bin/phpunit
+  - composer update --dev --no-ansi --no-interaction
+  - vendor/bin/phpunit
   stage: test
