--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ Test:
   script:
   - git submodule update --init
   - composer validate
-  - composer update --dev --no-ansi --no-interaction
+  - composer update --no-ansi --no-interaction
   - vendor/bin/phpunit
   stage: test
   only: 
