--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,7 @@
     "php": "^5.6 || ^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.14",
-    "phpunit/php-file-iterator": "1.4.5"
+    "phpunit/phpunit": "8.0.4"
   },
   "autoload-dev": {
     "psr-0": {
