--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,8 @@ pages:
     - XMLRPC: advanced/xmlrpc.md
     - AJAX Streaming: advanced/ajax-streaming.md
     - Helper Functions: advanced/helper-functions.md
+  - Administrators Guide
+    - Performance Tuning: admin/performance.md
   - Developer Reference:
     - Config Directives: reference/configs.md
     - Error Codes: reference/errorcodes.md
