--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "php": "^5.6 || ^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "8.0.4"
+    "phpunit/phpunit": "^8.1.0"
   },
   "autoload-dev": {
     "psr-0": {
