--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,10 @@
     }
   },
   "require": {
-    "php": "^5.6 || ^7.0"
+    "php": ">=5.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.1.0"
+    "phpunit/phpunit": ">=9.3.0"
   },
   "autoload-dev": {
     "psr-0": {
