--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     }
   },
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "hazaarlabs/hazaar-common": "dev-master as 3.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": ">=9.3.0"
