Tweaked the ErrorControl loader and removed support file

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
     "hmvc"
   ],
   "autoload": {
+    "files": [
+      "src/ErrorControl.php"
+    ],
     "psr-4": {
       "Hazaar\\": "src/"
     }
