--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "hazaarlabs/hazaar-common": "dev-master as 3.0.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=9.3.0"
+    "phpunit/phpunit": ">=9.3.0",
+    "overtrue/phplint": "*"
   },
   "autoload-dev": {
     "psr-0": {
