--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": ">=9.3.0",
-    "overtrue/phplint": "*"
+    "overtrue/phplint": "5.3.0"
   },
   "autoload-dev": {
     "psr-0": {
