--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,22 +2,26 @@ stages:
   - docker
   - test
 
+variables:
+  UNIT_TEST_IMAGE: $CI_REGISTRY_IMAGE/ci_unit_test_image
+
 Docker:
   image: docker:20.10.12
+  stage: docker
   services:
     - docker:20.10.12-dind
   before_script:
-    - echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_USERNAME --password-stdin
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
   script:
-    - docker build --pull --rm -f "Dockerfile" -t hazaar_cicd_image:latest "."
-    - docker tag hazaar_cicd_image $DOCKER_USERNAME/hazaar_cicd_image
-    - docker push $DOCKER_USERNAME/hazaar_cicd_image:latest
+    - docker build --pull --rm -f "Dockerfile" -t $UNIT_TEST_IMAGE:latest .
+    - docker push --all-tags $UNIT_TEST_IMAGE
   rules:
     - changes:
       - Dockerfile
 
 Test:
-  image: jamiecarl/hazaar_cicd_image
+  image: $UNIT_TEST_IMAGE:latest
+  stage: test
   script:
     - composer install
     - vendor/bin/phplint src
