--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ Docker:
   before_script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
   script:
-    - docker build --pull --rm -f "Dockerfile" -t $UNIT_TEST_IMAGE:latest .
+    - docker build --network host --pull --rm -f "Dockerfile" -t $UNIT_TEST_IMAGE:latest .
     - docker push --all-tags $UNIT_TEST_IMAGE
   rules:
     - changes:
