Resolve "Feature Request: Enhance Routing in Hazaar MVC"

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,8 @@ parameters:
     paths:
         - src
         - tests
+    excludePaths:
+        - tests/application/route.php
     universalObjectCratesClasses:
         - Hazaar\Map
         - Hazaar\Model
