feat(build): added CI build of test image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,23 @@
 stages:
+  - build
   - test
 
 variables:
   APPLICATION_PATH: .
   UNIT_TEST_IMAGE: $CI_REGISTRY_IMAGE/ci_unit_test_image
-  
+
+Build Test Image:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  before_script:
+    - until docker info; do sleep 1; done
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+  script:
+    - docker build --network host --pull --rm -f "Dockerfile" -t $CI_REGISTRY_IMAGE .
+    - docker push --all-tags $CI_REGISTRY_IMAGE
+
 # Coding Standard:
 #   stage: test
 #   image: composer
@@ -54,3 +67,4 @@ Unit Testing:
     when: always
     reports:
       junit: phpunit-test-results.xml
+
