feat(error): enhancements
* We can now catch shutdown (ie: FATAL) errors.
* Enhanced the method used to load helpers and
* Removed some obsolete class loader code

--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,8 @@
   ],
   "autoload": {
     "files": [
-      "src/ErrorControl.php",
       "src/Loader.php",
-      "src/Helpers.php",
-      "src/Constants.php"
+      "src/Helpers.php"
     ],
     "psr-4": {
       "Hazaar\\": "src/"
