--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,75 +1,69 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/pipeline/#customization
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-  - build
-  - test
-
+- build
+- test
 variables:
-  APPLICATION_PATH: .
-  UNIT_TEST_IMAGE: $CI_REGISTRY_IMAGE
-
+  APPLICATION_PATH: "."
+  UNIT_TEST_IMAGE: "$CI_REGISTRY_IMAGE"
 Build Test Image:
   stage: build
   image: docker:latest
   services:
-    - docker:dind
+  - docker:dind
   before_script:
-    - until docker info; do sleep 1; done
-    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+  - until docker info; do sleep 1; done
+  - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin
+    $CI_REGISTRY
   script:
-    - docker build --network host --pull --rm -f "Dockerfile" -t $UNIT_TEST_IMAGE .
-    - docker push --all-tags $CI_REGISTRY_IMAGE
+  - docker build --network host --pull --rm -f "Dockerfile" -t $UNIT_TEST_IMAGE .
+  - docker push --all-tags $CI_REGISTRY_IMAGE
   only:
     refs:
-      - master
+    - master
     changes:
-      - Dockerfile
-
-# Coding Standard:
-#   stage: test
-#   image: composer
-#   before_script:
-#     - composer install
-#   script:
-#     - vendor/bin/phpcs src --report-junit=phpcs-test-results.xml
-#   artifacts:
-#     when: always
-#     reports:
-#       junit: phpcs-test-results.xml
-
+    - Dockerfile
 Code Quality:
   stage: test
   image: overtrue/phplint:latest
   variables:
     INPUT_PATH: "./src"
     INPUT_OPTIONS: "-c .phplint.yml"
-  script: /home/appuser/.composer/vendor/bin/phplint -c .phplint.yml
+  script: "/home/appuser/.composer/vendor/bin/phplint -c .phplint.yml"
   artifacts:
     when: always
     reports:
       junit: phplint-test-results.xml
-
 Static Analysis:
   stage: test
   image: composer
   before_script:
-    - composer install
+  - composer install
   script:
-    - vendor/bin/phpstan analyse -c phpstan.neon --error-format=junit > phpstan-test-results.xml
+  - vendor/bin/phpstan analyse -c phpstan.neon --error-format=junit > phpstan-test-results.xml
   artifacts:
     when: always
     reports:
       junit: phpstan-test-results.xml
-
 Unit Testing:
   stage: test
-  image: $UNIT_TEST_IMAGE:latest
+  image: "$UNIT_TEST_IMAGE:latest"
   variables:
     APPLICATION_PATH: tests/application
   before_script:
-    - composer install
+  - composer install
   script:
-    - vendor/bin/phpunit
+  - vendor/bin/phpunit
   artifacts:
     when: always
     reports:
       junit: phpunit-test-results.xml
-
+sast:
+  stage: test
+include:
+- template: Security/SAST.gitlab-ci.yml
