--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ composer.lock
 .phpunit.result.cache
 phpunit-test-results.xml
 phplint-test-results.xml
+docs/node_modules
+docs/src/.vitepress/cache
+docs/src/.vitepress/dist
