--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,20 @@
 {
-  "devDependencies": {
-    "vitepress": "^1.3.4"
-  },
+  "name": "hazaar-docs",
+  "version": "1.0.0",
+  "description": "Hazaar Docs",
+  "license": "Apache-2.0",
+  "type": "module",
   "scripts": {
-    "dev": "vitepress dev src --host",
-    "build": "vitepress build src",
-    "preview": "vitepress preview src"
+    "docs:build": "vuepress build src",
+    "docs:clean-dev": "vuepress dev src --clean-cache",
+    "docs:dev": "vuepress dev src",
+    "docs:update-package": "npx vp-update"
   },
-  "dependencies": {
-    "help": "^3.0.2"
+  "devDependencies": {
+    "@vuepress/bundler-vite": "^2.0.0-rc.18",
+    "sass-embedded": "^1.80.6",
+    "vue": "^3.4.0",
+    "vuepress": "^2.0.0-rc.18",
+    "vuepress-theme-hope": "^2.0.0-rc.59"
   }
 }
