--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,7 +128,7 @@ Build Testing Image:
     - if: $CI_MERGE_REQUEST_ID
 
 Build Production Documentation:
-  extends: .Build Image
+  extends: .Build Docs
   environment: production
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
