--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,11 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.18",
+    "echarts": "^5.5.1",
+    "flowchart.ts": "^3.0.1",
+    "markmap-lib": "^0.17.2",
+    "markmap-toolbar": "^0.17.2",
+    "markmap-view": "^0.17.2",
     "sass-embedded": "^1.80.6",
     "vue": "^3.4.0",
     "vuepress": "^2.0.0-rc.18",
