--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "markmap-lib": "^0.17.2",
     "markmap-toolbar": "^0.17.2",
     "markmap-view": "^0.17.2",
+    "mermaid": "^11.4.0",
     "sass-embedded": "^1.80.6",
     "vue": "^3.4.0",
     "vuepress": "^2.0.0-rc.18",
