--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,31 +113,31 @@ Unit Testing:
     reports:
       junit: phpunit-test-results.xml
 
-Build Testing Documentation:
-  extends: .Build Docs
-  environment: testing
-  rules:
-    - if: $CI_MERGE_REQUEST_ID
+# Build Testing Documentation:
+#   extends: .Build Docs
+#   environment: testing
+#   rules:
+#     - if: $CI_MERGE_REQUEST_ID
 
 Build Testing Image:
   extends: .Build Image
   environment: testing
-  needs: 
-    - Build Testing Documentation
+  # needs: 
+  #   - Build Testing Documentation
   rules:
     - if: $CI_MERGE_REQUEST_ID
 
-Build Production Documentation:
-  extends: .Build Docs
-  environment: production
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
+# Build Production Documentation:
+#   extends: .Build Docs
+#   environment: production
+#   rules:
+#     - if: '$CI_COMMIT_BRANCH == "master"'
 
 Build Production Image:
   extends: .Build Image
   environment: production
-  needs: 
-    - Build Production Documentation
+  # needs: 
+  #   - Build Production Documentation
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
 
