feat(docs): added sidebar menu to API section
Currently this is using 'structure' to generate the menu.  I will be adding a generator section to the build script.  See #301

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ variables:
     - composer install
   script:
     # - phpdoc -d src -t docs/src/api --template="/md/themes/markdown"
-    - bin/hztool --scan src --title "Hazaar API Documentation" doc docs/src/api
+    - bin/hztool --scan src --title "API Reference" doc docs/src/api
   artifacts:
     paths:
       - docs/src/api
