--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.0",
     "overtrue/phplint": "*",
-    "phpstan/phpstan": "^2.0",
+    "phpstan/phpstan": "2.1.1",
     "squizlabs/php_codesniffer": "^3.9"
   },
   "autoload-dev": {
