--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,11 @@
 parameters:
     level: 6
+    bootstrapFiles:
+        - src/Application.php
     paths:
         - src
         - tests
     excludePaths:
         - tests/application/route.php
     universalObjectCratesClasses:
-        - Hazaar\Map
         - Hazaar\Model
