--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     }
   },
   "require": {
-    "php": ">=8.3"
+    "php": ">=8.3",
+    "dompdf/dompdf": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
