--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,11 +15,10 @@
 			"extensions": [
 				"xdebug.php-debug",
 				"junstyle.php-cs-fixer",
-				"emallin.phpunit",
 				"aswinkumar863.smarty-template-support",
-				"bmewburn.vscode-intelephense-client",
 				"SanderRonde.phpstan-vscode",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"DEVSENSE.phptools-vscode"
 			]
 		}
 	}
