fix(doc): fixed missing API sidebar

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ variables:
   artifacts:
     paths:
       - docs/src/api
+      - docs/src/.vuepress/api_sidebar.js
 
 .Build Image:
   stage: package
